Scenario is running now. Still have to update the agents.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mapc2018-pucrs</name>
+	<name>mapc2019-liv</name>
 	<comment></comment>
 	<projects>
 	</projects>
