--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="lib/protocol-2.0.jar"/>
-	<classpathentry kind="lib" path="lib/eismassim-3.6-jar-with-dependencies.jar"/>
-	<classpathentry kind="lib" path="lib/eismassim-3.6.jar"/>
+	<classpathentry kind="lib" path="lib/eismassim-4.0-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="lib/eismassim-4.0.jar"/>
 	<classpathentry kind="lib" path="lib/monitor-2.0-jar-with-dependencies.jar"/>
 	<classpathentry kind="lib" path="lib/monitor-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/server-2019-1.0-jar-with-dependencies.jar"/>
@@ -19,8 +19,10 @@
 	<classpathentry kind="lib" path="lib/moise-0.11-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/npl-0.3-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.6.jar"/>
 	<classpathentry kind="src" path="src/env"/>
 	<classpathentry kind="src" path="src/agt"/>
 	<classpathentry kind="src" path="src/org"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
