--- a/conf/eisconfig/localhost/eismassimconfig7.json
+++ b/conf/eisconfig/localhost/eismassimconfig7.json
@@ -8,6 +8,6 @@
   "notifications": false,
   "queued": true,
   "entities": [
-    {"name": "connectionA7", "username": "agentA7", "password": "1", "print_iilang": false, "print_json": false}
+    {"name": "connectionA7", "username": "agentA7", "password": "1", "print-iilang": false, "print-json": false}
   ]
 }
