Cleanup and fixes. It is ready for development now.

--- a/conf/SampleConfig.json
+++ b/conf/SampleConfig.json
@@ -2,14 +2,12 @@
   "server" : "$(server/server.json)",
 
   "manual-mode" : [
-    ["A", "B"],
-    ["B", "C"],
-    ["A", "C"]
+    ["A"]
   ],
 
   "match" : [
     {
-      "steps" : 10,
+      "steps" : 20,
       "randomSeed" : 17,
       "randomFail" : 1,
       "entities" : [{"standard" : 10}],
@@ -30,7 +28,6 @@
   ],
 
   "teams" : {
-    "A" : "$(teams/A.json)",
-    "B" : "$(teams/B.json)"
+    "A" : "$(teams/A.json)"
   }
 }
