--- a/conf/SampleConfig.json
+++ b/conf/SampleConfig.json
@@ -1,5 +1,19 @@
 {
-  "server" : "$(server/server.json)",
+  "server" : {
+    "tournamentMode" : "round-robin",
+    "teamsPerMatch" : 1,
+    "teamSize" : 10,
+    "launch" : "key",
+    "port" : 12300,
+    "backlog" : 10000,
+    "agentTimeout" : 4000,
+    "resultPath" : "results",
+    "logLevel" : "normal",
+    "logPath" : "logs",
+    "replayPath" : "replays",
+    "maxPacketLength" : 65536
+  },
+
 
   "manual-mode" : [
     ["A", "B"]
@@ -7,25 +21,36 @@
 
   "match" : [
     {
+	  "setup" : "conf/setup/testsample.txt",
+	
       "steps" : 500,
-      "randomSeed" : 17,
+      "NOrandomSeed" : 17,
       "randomFail" : 1,
       "entities" : [{"standard" : 10}],
       "clearSteps" : 3,
-      "clearEnergyCost" : 50,
+      "clearEnergyCost" : 30,
       "disableDuration" : 4,
       "maxEnergy" : 300,
       "attachLimit" : 10,
       
       "grid" : {
-        "height" : 40,
-        "width" : 40,
-        "file" : "conf/maps/test40x40.bmp"
+        "height" : 50,
+        "width" : 50,
+        "file" : "conf/maps/test40x40.bmp",
+        "instructions": [
+          ["cave", 0.45, 10, 5, 4],
+          ["line-border", 1],
+          ["ragged-border", 3]
+        ],
+        "goals": {
+          "number" : 3,
+          "size" : [3,7]
+        }
       },
-      "setup" : "conf/setup/testsample.txt",
+      
       
       "blockTypes" : [3, 3],
-      "dispensers" : [2, 3],
+      "dispensers" : [5, 10],
       
       "tasks" : {
         "size" : [2, 4],
@@ -34,13 +59,12 @@
       },
       
       "events" : {
-        "chance" : 10,
+        "chance" : 15,
         "radius" : [3, 5],
         "warning" : 5,
-        "create" : [5, 10],
-        "perimeter" : 3
+        "create" : [-3, 1],
+        "perimeter" : 2
       }
-      
     }
   ],
 
