--- a/conf/SampleConfig.json
+++ b/conf/SampleConfig.json
@@ -27,6 +27,7 @@
       "NOrandomSeed" : 17,
       "randomFail" : 1,
       "entities" : [{"standard" : 10}],
+
       "clearSteps" : 3,
       "clearEnergyCost" : 30,
       "disableDuration" : 4,
@@ -36,18 +37,17 @@
       "grid" : {
         "height" : 50,
         "width" : 50,
-        "file" : "conf/maps/test40x40.bmp",
+        "NOfile" : "conf/maps/test40x40.bmp",
         "instructions": [
-          ["cave", 0.45, 10, 5, 4],
+          ["cave", 0.45, 9, 5, 4],
           ["line-border", 1],
           ["ragged-border", 3]
         ],
         "goals": {
           "number" : 3,
-          "size" : [3,7]
+          "size" : [1,2]
         }
       },
-      
       
       "blockTypes" : [3, 3],
       "dispensers" : [5, 10],
