--- a/conf/SampleConfig.json
+++ b/conf/SampleConfig.json
@@ -24,7 +24,7 @@
 	  "setup" : "conf/setup/testsample.txt",
 	
       "steps" : 500,
-      "randomSeed" : 18,
+      "NOrandomSeed" : 18,
       "randomFail" : 1,
       "entities" : [{"standard" : 10}],
 
@@ -59,7 +59,7 @@
       },
       
       "events" : {
-        "chance" : 10,
+        "chance" : 0,
         "radius" : [3, 5],
         "warning" : 5,
         "create" : [-3, 1],
