--- a/conf/eisconfig/localhost/eismassimconfig5.json
+++ b/conf/eisconfig/localhost/eismassimconfig5.json
@@ -8,6 +8,6 @@
   "notifications": false,
   "queued": true,
   "entities": [
-    {"name": "connectionA5", "username": "agentA5", "password": "1", "print-iilang": false, "print-json": false}
+    {"name": "connectionA5", "username": "A5", "password": "1", "print-iilang": false, "print-json": false}
   ]
 }
