--- a/conf/SampleConfig.json
+++ b/conf/SampleConfig.json
@@ -23,7 +23,101 @@
     {
 	  "setup" : "conf/setup/testsample.txt",
 
-      "steps" : 2000,
+      "steps" : 500,
+      "randomSeed" : 19,
+      "randomFail" : 1,
+      "entities" : [{"standard" : 10}],
+
+      "clearSteps" : 3,
+      "clearEnergyCost" : 30,
+      "disableDuration" : 4,
+      "maxEnergy" : 300,
+      "attachLimit" : 10,
+
+      "grid" : {
+        "height" : 50,
+        "width" : 50,
+        "NOfile" : "conf/maps/test40x40.bmp",
+        "instructions": [
+          ["cave", 0.45, 9, 5, 4],
+          ["line-border", 1],
+          ["ragged-border", 3]
+        ],
+        "goals": {
+          "number" : 3,
+          "size" : [1,2]
+        }
+      },
+
+      "blockTypes" : [3, 3],
+      "dispensers" : [5, 10],
+
+      "tasks" : {
+        "size" : [2, 4],
+        "duration" : [100, 200],
+        "probability" : 0.05
+      },
+
+      "events" : {
+        "chance" : 0,
+        "radius" : [3, 5],
+        "warning" : 5,
+        "create" : [-3, 1],
+        "perimeter" : 2
+      }
+    },
+    
+    {
+	  "setup" : "conf/setup/testsample.txt",
+
+      "steps" : 500,
+      "randomSeed" : 19,
+      "randomFail" : 1,
+      "entities" : [{"standard" : 10}],
+
+      "clearSteps" : 3,
+      "clearEnergyCost" : 30,
+      "disableDuration" : 4,
+      "maxEnergy" : 300,
+      "attachLimit" : 10,
+
+      "grid" : {
+        "height" : 50,
+        "width" : 50,
+        "NOfile" : "conf/maps/test40x40.bmp",
+        "instructions": [
+          ["cave", 0.45, 9, 5, 4],
+          ["line-border", 1],
+          ["ragged-border", 3]
+        ],
+        "goals": {
+          "number" : 3,
+          "size" : [1,2]
+        }
+      },
+
+      "blockTypes" : [3, 3],
+      "dispensers" : [5, 10],
+
+      "tasks" : {
+        "size" : [2, 4],
+        "duration" : [100, 200],
+        "probability" : 0.05
+      },
+
+      "events" : {
+        "chance" : 0,
+        "radius" : [3, 5],
+        "warning" : 5,
+        "create" : [-3, 1],
+        "perimeter" : 2
+      }
+    },
+    
+    {
+	  "setup" : "conf/setup/testsample.txt",
+
+      "steps" : 500,
       "randomSeed" : 19,
       "randomFail" : 1,
       "entities" : [{"standard" : 10}],
@@ -66,6 +160,7 @@
         "perimeter" : 2
       }
     }
+    
   ],
 
   "teams" : {
