Improving goal evaluation.

--- a/conf/SampleConfig.json
+++ b/conf/SampleConfig.json
@@ -24,7 +24,7 @@
 	  "setup" : "conf/setup/testsample.txt",
 
       "steps" : 500,
-      "randomSeed" : 1570964393203,
+      "randomSeed" : 21,
       "randomFail" : 1,
       "entities" : [{"standard" : 10}],
 
@@ -53,7 +53,7 @@
       "dispensers" : [5, 10],
 
       "tasks" : {
-        "size" : [6, 8],
+        "size" : [2, 4],
         "duration" : [100, 200],
         "probability" : 0.5
       },
