--- a/conf/eisconfig/localhost/teamB/eismassimconfig3.json
+++ b/conf/eisconfig/localhost/teamB/eismassimconfig3.json
@@ -8,6 +8,6 @@
   "notifications": false,
   "queued": true,
   "entities": [
-    {"name": "connectionB3", "username": "agentB3", "password": "1", "print-iilang": false, "print-json": false}
+    {"name": "connectionB3", "username": "B3", "password": "1", "print-iilang": false, "print-json": false}
   ]
 }
