--- a/conf/eisconfig/localhost/teamB/eismassimconfig6.json
+++ b/conf/eisconfig/localhost/teamB/eismassimconfig6.json
@@ -8,6 +8,6 @@
   "notifications": false,
   "queued": true,
   "entities": [
-    {"name": "connectionB6", "username": "agentB6", "password": "1", "print-iilang": false, "print-json": false}
+    {"name": "connectionB6", "username": "B6", "password": "1", "print-iilang": false, "print-json": false}
   ]
 }
