--- a/conf/eisconfig/localhost/teamB/eismassimconfig2.json
+++ b/conf/eisconfig/localhost/teamB/eismassimconfig2.json
@@ -8,6 +8,6 @@
   "notifications": false,
   "queued": true,
   "entities": [
-    {"name": "connectionB2", "username": "agentB2", "password": "1", "print-iilang": false, "print-json": false}
+    {"name": "connectionB2", "username": "B2", "password": "1", "print-iilang": false, "print-json": false}
   ]
 }
