--- a/conf/eisconfig/localhost/teamB/eismassimconfig4.json
+++ b/conf/eisconfig/localhost/teamB/eismassimconfig4.json
@@ -8,6 +8,6 @@
   "notifications": false,
   "queued": true,
   "entities": [
-    {"name": "connectionB4", "username": "agentB4", "password": "1", "print-iilang": false, "print-json": false}
+    {"name": "connectionB4", "username": "B4", "password": "1", "print-iilang": false, "print-json": false}
   ]
 }
