--- a/conf/eisconfig/localhost/teamB/eismassimconfig5.json
+++ b/conf/eisconfig/localhost/teamB/eismassimconfig5.json
@@ -8,6 +8,6 @@
   "notifications": false,
   "queued": true,
   "entities": [
-    {"name": "connectionB5", "username": "agentB5", "password": "1", "print-iilang": false, "print-json": false}
+    {"name": "connectionB5", "username": "B5", "password": "1", "print-iilang": false, "print-json": false}
   ]
 }
