--- a/conf/eisconfig/localhost/teamB/eismassimconfig9.json
+++ b/conf/eisconfig/localhost/teamB/eismassimconfig9.json
@@ -8,6 +8,6 @@
   "notifications": false,
   "queued": true,
   "entities": [
-    {"name": "connectionB9", "username": "agentB9", "password": "1", "print-iilang": false, "print-json": false}
+    {"name": "connectionB9", "username": "B9", "password": "1", "print-iilang": false, "print-json": false}
   ]
 }
